--- a/css/style.css
+++ b/css/style.css
@@ -462,8 +462,8 @@ section.content-section .wf-row {
 }
 
 .saving-guide .saving-step p {
-	font-size: 18px;
-	margin-bottom: 20px;
+	font-size: 16px;
+	margin-bottom: 16px;
 }
 
 section.faqs {
@@ -1041,11 +1041,7 @@ section.register-user .register-form .form-group p a {
 		background-position: left 30% top 43%, left 70% top 43%;
 	}
 	
-	.saving-guide .saving-step .step-number {
-		width: 50px;
-		height: 50px;
-		font-size: 30px;
-	}
+	
 	
 	section.fund-compare .table tr th {
 		font-size: 18px;
@@ -1109,6 +1105,8 @@ section.register-user .register-form .form-group p a {
 	
 	.invest-conten div.inner-body p {
 		margin-bottom: 30px;
+		text-align: center;
+        font-size: 18px;
 	}
 
 	.trustpilot-widget {
@@ -1126,7 +1124,6 @@ section.register-user .register-form .form-group p a {
 @media (max-width: 767px) {
 	
 	h2 {
-		font-size: 30px;
 		line-height: 45px;
 	}
 	
@@ -1142,6 +1139,7 @@ section.register-user .register-form .form-group p a {
 	
 	.btn {
 		font-size: 18px;
+		width: 100%;
 	}
 	
 	input.form-control,
@@ -1166,14 +1164,14 @@ section.register-user .register-form .form-group p a {
 	}
 	
 	section.main-banner {
-		padding-top: 60px;
-		padding-bottom: 60px;
+		padding-top: 80px;
+		padding-bottom: 80px;
 	}
 	
 	section.main-banner .banner-content h1 {
 		font-size: 46px;
         line-height: 52px;
-        font-weight: 300;
+        font-weight: 500;
         letter-spacing: 0.02em;
 	}
 	
@@ -1233,6 +1231,7 @@ section.register-user .register-form .form-group p a {
 		max-width: 100%;
 		font-size: 32px;
 		line-height: 40px;
+		text-align: center;
 	}
 
 	.invest-conten div.inner-body p img {
@@ -1246,11 +1245,12 @@ section.register-user .register-form .form-group p a {
 	
 	section.faqs {
 		padding: 40px 0px;
-		background-size: 35%;
 	}
 	
 	section.faqs .faq-questions, section.faqs p {
 		margin-bottom: 30px;
+		font-size: 16px;
+		line-height: 24px;
 	}
 	
 	section.faqs .faq-questions .accordion .accordion-item {
