--- a/css/style.css
+++ b/css/style.css
@@ -770,8 +770,10 @@ section.register-user .register-form .form-group p a {
 
 .footer {
 	background-image: url('../images/backgrounds/general-bg.png');
-    background-size: cover;
+	background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 .footer .footer-top {
